{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 128,
  "lineage": "c3c133c3-110b-4d1d-f705-200198551778",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:loadbalancer/app/golang-terraform-staging-alb/6839706d718e8eb2",
            "arn_suffix": "app/golang-terraform-staging-alb/6839706d718e8eb2",
            "dns_name": "golang-terraform-staging-alb-779157153.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:249154229579:loadbalancer/app/golang-terraform-staging-alb/6839706d718e8eb2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "golang-terraform-staging-alb",
            "security_groups": [
              "sg-07f93435947b3b8d6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00549b81d8051736d"
              },
              {
                "subnet_id": "subnet-0e21a07b417224793"
              }
            ],
            "subnets": [
              "subnet-00549b81d8051736d",
              "subnet-0e21a07b417224793"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-alb"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-alb"
            },
            "vpc_id": "vpc-0871e58aac9ee8ef3",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:internet-gateway/igw-0ce19dc72ed2f255b",
            "id": "igw-0ce19dc72ed2f255b",
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-igw"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-igw"
            },
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:listener/app/golang-terraform-staging-alb/6839706d718e8eb2/73af5cde4baecea2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:targetgroup/golang-terraform-staging-tg/edb18133a67500a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:249154229579:listener/app/golang-terraform-staging-alb/6839706d718e8eb2/73af5cde4baecea2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:loadbalancer/app/golang-terraform-staging-alb/6839706d718e8eb2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:249154229579:targetgroup/golang-terraform-staging-tg/edb18133a67500a0",
            "arn_suffix": "targetgroup/golang-terraform-staging-tg/edb18133a67500a0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/api/v1/env/check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:249154229579:targetgroup/golang-terraform-staging-tg/edb18133a67500a0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "golang-terraform-staging-tg",
            "port": 8888,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-lb-tg"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ce19dc72ed2f255b",
            "id": "r-rtb-0b762f29550ea681f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b762f29550ea681f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:route-table/rtb-0b762f29550ea681f",
            "id": "rtb-0b762f29550ea681f",
            "owner_id": "249154229579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce19dc72ed2f255b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-routing-table-public"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-routing-table-public"
            },
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0125daf153ac690d4",
            "route_table_id": "rtb-0b762f29550ea681f",
            "subnet_id": "subnet-0e21a07b417224793"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f0ae7a2c344276",
            "route_table_id": "rtb-0b762f29550ea681f",
            "subnet_id": "subnet-00549b81d8051736d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:security-group/sg-07f93435947b3b8d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f93435947b3b8d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210808000045999500000001",
            "name_prefix": "terraform-",
            "owner_id": "249154229579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:security-group/sg-035edea33311a3d06",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035edea33311a3d06",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-07f93435947b3b8d6"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20210808000048504700000002",
            "name_prefix": "terraform-",
            "owner_id": "249154229579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "golang-terraform-staging-service-sg"
            },
            "tags_all": {
              "Name": "golang-terraform-staging-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-0e42811ed798d1237",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-0e42811ed798d1237",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-private-subnet-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-private-subnet-1"
            },
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-0f2cef0485fd4d302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0f2cef0485fd4d302",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-private-subnet-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-private-subnet-2"
            },
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-0e21a07b417224793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.100.0/24",
            "id": "subnet-0e21a07b417224793",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-public-subnet-1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-public-subnet-1"
            },
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:subnet/subnet-00549b81d8051736d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-00549b81d8051736d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-public-subnet-2"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-public-subnet-2"
            },
            "vpc_id": "vpc-0871e58aac9ee8ef3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:249154229579:vpc/vpc-0871e58aac9ee8ef3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03974c3269d61e4f4",
            "default_route_table_id": "rtb-0075e9686a0b9344d",
            "default_security_group_id": "sg-0492d30ba8b3ce28d",
            "dhcp_options_id": "dopt-d25b4aba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0871e58aac9ee8ef3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0075e9686a0b9344d",
            "owner_id": "249154229579",
            "tags": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "golang-terraform-staging-vpc"
            }
          }
        }
      ]
    }
  ]
}